# jdvrif

./: LICENSE  README.md
libsodium/: LICENSE
src/: CMakeLists.txt  base64.cpp  base64.h  binary_io.cpp  binary_io.h  common.h  compile_jdvrif.sh  compression.cpp  compression.h  conceal.cpp  conceal.h  deflateFile.cpp  embedded_layout.h  encryption.cpp  encryption.h  encryption_bluesky.cpp  encryption_internal.h  encryption_kdf.cpp  encryption_stream.cpp  encryption_stream_decrypt.cpp  encryption_stream_shared.h  fileChecks.cpp  fileChecks.h  file_utils.cpp  file_utils.h  information.cpp  jdvin.cpp  jdvrdt.cpp  jdvrdt_no_comments.cpp  jdvrif  jdvrif.cpp  jpeg_utils.cpp  jpeg_utils.h  main.cpp  pin_input.cpp  pin_input.h  programArgs.cpp  programArgs.h  program_args.cpp  program_args.h  (+16 more)
src/bsky/: bsky_post.py  create_bsky_post.py
src/jdvin/: compile_jdvin.sh  crc32.cpp  deflate.cpp  deflateFile.cpp  deflateFile.h  encrypt.cpp  encryptFile.cpp  encryptFile.h  eraseSegments.cpp  eraseSegments.h  fileChecks.cpp  fileChecks.h  getByteValue.cpp  getByteValue.h  information.cpp  information.h  insertProfileHeaders.cpp  insert_profile_headers.cpp  jdvIn.cpp  jdvIn.h  jdvin.cpp  jdvin.h  main.cpp  profilesVec.cpp  programArgs.cpp  programArgs.h  searchFunc.cpp  searchFunc.h  segmentDataFile.cpp  segmentsVec.cpp  segmentsVec.h  splitDataFile.cpp  splitDataFile.h  tmp.txt  toBase64.cpp  toBase64.h  transcodeImage.cpp  transcodeImage.h  valueUpdater.cpp  valueUpdater.h  (+4 more)
src/jdvout/: compile_jdvout.sh  decrypt.cpp  decryptFile.cpp  decryptFile.h  fileChecks.cpp  fileChecks.h  findProfileHeaders.cpp  find_profile_headers.cpp  fourBytes.cpp  four_bytes.cpp  fromBase64.cpp  fromBase64.h  getByteValue.cpp  getByteValue.h  getPin.cpp  getPin.h  inflate.cpp  inflateFile.cpp  inflateFile.h  information.cpp  jdvOut.cpp  jdvOut.h  jdvout.cpp  jdvout.h  main.cpp  programArgs.cpp  programArgs.h  searchFunc.cpp  valueUpdater.cpp
src/libjpeg-turbo/: turbojpeg-static.lib  turbojpeg.h
src/libsodium/: libsodium.lib
src/libsodium/include/sodium/: crypto_pwhash.h  utils.h
src/libsodium/x64_static_lib/: libsodium.lib
src/linux_executable/: jdvrdt  jdvrif
src/tests/: create_testdata.sh  generate_golden.sh  run_bsky_tests.sh  run_golden_tests.sh  run_roundtrip_tests.sh  run_security_smoke.sh
src/tests/golden/: manifest.tsv
src/tests/testdata/payloads/: payload_text.txt
src/windows/libjpeg-turbo/x64_static_lib/: turbojpeg-static.lib
src/windows/libsodium/include/sodium/: version.h
src/windows/zlib-1.3.1/: zlib.lib
